[build-system]
requires = ["setuptools >= 69", "setuptools_scm[toml] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis-vcf"
description = "Hypothesis strategy for generating VCF"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "hypothesis",
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/hypothesis-vcf"

[project.optional-dependencies]
dev = [
  "pysam",
  "pytest",
]

[tool.setuptools]
packages = ["hypothesis_vcf"]

[tool.setuptools_scm]
version_file = "hypothesis_vcf/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
# Assume Python 3.9
target-version = "py39"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "RUF", "PT"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "hypothesis",
]
